<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>hu.bme.mit.incqueryd</groupId>
	<artifactId>hu.bme.mit.incqueryd</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>IncQuery-D</name>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<tycho.version>0.22.0</tycho.version>
		<scala.version>2.10.4</scala.version>
	</properties>
	<build>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho.version}</version>
					<extensions>true</extensions>
				</plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>target-platform-configuration</artifactId>
          <version>${tycho.version}</version>
          <configuration>
            <dependency-resolution>
              <optionalDependencies>ignore</optionalDependencies>
              <extraRequirements>
                <requirement>
                  <type>eclipse-plugin</type>
                  <id>hu.bme.mit.incqueryd.systembundlefragment</id>
                  <versionRange>0.0.0</versionRange>
                </requirement>
              </extraRequirements>
            </dependency-resolution>
          </configuration>
        </plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<strictBinIncludes>false</strictBinIncludes>
					</configuration>
				</plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho.version}</version>
          <configuration>
            <excludeResources>
              <excludeResource>**/*.scala</excludeResource>
            </excludeResources>
          </configuration>
        </plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.scala-tools</groupId>
					<artifactId>maven-scala-plugin</artifactId>
					<version>2.10.1</version>
					<executions>
						<execution>
							<id>scala-compile-first</id>
							<phase>process-resources</phase>
							<goals>
								<goal>add-source</goal>
								<goal>compile</goal>
							</goals>
						</execution>
						<execution>
							<id>scala-test-compile</id>
							<phase>process-test-resources</phase>
							<goals>
								<goal>testCompile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.2</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
			</plugins>
	</build>
	<repositories>
		<repository>
			<id>kepler</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/kepler</url>
		</repository>
		<repository>
			<id>orbit</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20140525021250/repository/</url>
		</repository>
		<repository>
			<id>emf</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/modeling/emf/emf/updates/releases/</url>
		</repository>
		<repository>
			<id>xtext</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
		</repository>
		<repository>
			<id>incquery</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/incquery/updates/integration</url>
		</repository>
    <repository>
			<id>misc</id>
			<layout>p2</layout>
			<url>https://build.inf.mit.bme.hu/jenkins/job/IncQuery-D_Update_Site/lastSuccessfulBuild/artifact/p2-maven-plugin/target/repository/</url>
		</repository>
    <repository>
      <id>scala</id>
      <layout>p2</layout>
      <url>http://download.scala-ide.org/sdk/e38/scala210/stable/site</url>
    </repository>
	</repositories>
	<dependencies>
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>
  </dependencies>
	<modules>
  	<module>hu.bme.mit.incqueryd.systembundlefragment</module>
		<module>hu.bme.mit.incqueryd.client</module>
		<module>hu.bme.mit.incqueryd.runtime</module>
		<module>hu.bme.mit.incqueryd.test</module>
	</modules>
</project>